[package]
name = "twain2"
version = "0.1.0-alpha.0"
edition = "2021"
authors = ["Orhan \"aib\" Kavrakoglu <aibok42@gmail.com>"]
license = "MIT"
keywords = ["twain", "scanner"]
categories = ["api-bindings", "multimedia::images"]
homepage = "https://github.com/aib/twain2"
repository = "https://github.com/aib/twain2"
readme = "README.md"
description = "Rust TWAIN library"

[dependencies]
libloading = "0.7.4"
log = "0.4.17"
parking_lot = "0.12.1"
winapi = { version = "0.3.9", features = ["std", "winbase", "winuser"] }

[build-dependencies]
bindgen = "0.63.0"

[dev-dependencies]
env_logger = "0.10.0"
